Rename project to location annotator (#56)
* Update package.json

* Update package-lock.json

* Run npm generate:server:edge

* Minor update

* Fix typo in README

* Bump schema and annotator version to 1.2.0
