# server/openapi_server/controllers/tool_controller.py
@@ -1,5 +1,6 @@
 from openapi_server.models.tool import Tool  # noqa: E501
 from openapi_server.models.tool_dependencies import ToolDependencies  # noqa: E501
+from openapi_server.models.tool_type import ToolType
 from openapi_server.models.license import License
 
 
@@ -12,17 +13,17 @@ def get_tool():  # noqa: E501
     :rtype: Tool
     """
     tool = Tool(
-        name="physical-address-annotator-example",
-        version="1.1.2",
+        name="location-annotator-example",
+        version="1.2.0",
         license=License.APACHE_2_0,
-        repository="github:nlpsandbox/physical-address-annotator-example",
-        description="Example implementation of the NLP Sandbox Physical " +
-                "Address Annotator",
+        repository="github:nlpsandbox/location-annotator-example",
+        description="Example implementation of the NLP Sandbox Location " +
+                "Annotator API",
         author="NLP Sandbox Team",
         author_email="team@nlpsandbox.io",
-        url="https://github.com/nlpsandbox/physical-address-annotator-example",
-        type="nlpsandbox:physical-address-annotator",
-        api_version="1.1.2"
+        url="https://github.com/nlpsandbox/location-annotator-example",
+        type=ToolType.LOCATION_ANNOTATOR,
+        api_version="1.2.0"
     )
     return tool, 200
 
