# server/openapi_server/models/text_location_annotation_response.py
@@ -1,0 +1,70 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server.models.text_location_annotation import TextLocationAnnotation
+from openapi_server import util
+
+from openapi_server.models.text_location_annotation import TextLocationAnnotation  # noqa: E501
+
+class TextLocationAnnotationResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, text_location_annotations=None):  # noqa: E501
+        """TextLocationAnnotationResponse - a model defined in OpenAPI
+
+        :param text_location_annotations: The text_location_annotations of this TextLocationAnnotationResponse.  # noqa: E501
+        :type text_location_annotations: List[TextLocationAnnotation]
+        """
+        self.openapi_types = {
+            'text_location_annotations': List[TextLocationAnnotation]
+        }
+
+        self.attribute_map = {
+            'text_location_annotations': 'textLocationAnnotations'
+        }
+
+        self._text_location_annotations = text_location_annotations
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TextLocationAnnotationResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The TextLocationAnnotationResponse of this TextLocationAnnotationResponse.  # noqa: E501
+        :rtype: TextLocationAnnotationResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def text_location_annotations(self):
+        """Gets the text_location_annotations of this TextLocationAnnotationResponse.
+
+        A list of location annotations  # noqa: E501
+
+        :return: The text_location_annotations of this TextLocationAnnotationResponse.
+        :rtype: List[TextLocationAnnotation]
+        """
+        return self._text_location_annotations
+
+    @text_location_annotations.setter
+    def text_location_annotations(self, text_location_annotations):
+        """Sets the text_location_annotations of this TextLocationAnnotationResponse.
+
+        A list of location annotations  # noqa: E501
+
+        :param text_location_annotations: The text_location_annotations of this TextLocationAnnotationResponse.
+        :type text_location_annotations: List[TextLocationAnnotation]
+        """
+        if text_location_annotations is None:
+            raise ValueError("Invalid value for `text_location_annotations`, must not be `None`")  # noqa: E501
+
+        self._text_location_annotations = text_location_annotations
