# server/openapi_server/models/text_physical_address_annotation_response.py
@@ -1,70 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from openapi_server.models.base_model_ import Model
-from openapi_server.models.text_physical_address_annotation import TextPhysicalAddressAnnotation
-from openapi_server import util
-
-from openapi_server.models.text_physical_address_annotation import TextPhysicalAddressAnnotation  # noqa: E501
-
-class TextPhysicalAddressAnnotationResponse(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, text_physical_address_annotations=None):  # noqa: E501
-        """TextPhysicalAddressAnnotationResponse - a model defined in OpenAPI
-
-        :param text_physical_address_annotations: The text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.  # noqa: E501
-        :type text_physical_address_annotations: List[TextPhysicalAddressAnnotation]
-        """
-        self.openapi_types = {
-            'text_physical_address_annotations': List[TextPhysicalAddressAnnotation]
-        }
-
-        self.attribute_map = {
-            'text_physical_address_annotations': 'textPhysicalAddressAnnotations'
-        }
-
-        self._text_physical_address_annotations = text_physical_address_annotations
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'TextPhysicalAddressAnnotationResponse':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The TextPhysicalAddressAnnotationResponse of this TextPhysicalAddressAnnotationResponse.  # noqa: E501
-        :rtype: TextPhysicalAddressAnnotationResponse
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def text_physical_address_annotations(self):
-        """Gets the text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
-
-        A list of physical address annotations  # noqa: E501
-
-        :return: The text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
-        :rtype: List[TextPhysicalAddressAnnotation]
-        """
-        return self._text_physical_address_annotations
-
-    @text_physical_address_annotations.setter
-    def text_physical_address_annotations(self, text_physical_address_annotations):
-        """Sets the text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
-
-        A list of physical address annotations  # noqa: E501
-
-        :param text_physical_address_annotations: The text_physical_address_annotations of this TextPhysicalAddressAnnotationResponse.
-        :type text_physical_address_annotations: List[TextPhysicalAddressAnnotation]
-        """
-        if text_physical_address_annotations is None:
-            raise ValueError("Invalid value for `text_physical_address_annotations`, must not be `None`")  # noqa: E501
-
-        self._text_physical_address_annotations = text_physical_address_annotations
