# server/openapi_server/models/tool_type.py
@@ -1,0 +1,49 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class ToolType(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    """
+    allowed enum values
+    """
+    CONTACT_ANNOTATOR = "nlpsandbox:contact-annotator"
+    COVID_SYMPTOM_ANNOTATOR = "nlpsandbox:covid-symptom-annotator"
+    DATA_NODE = "nlpsandbox:data-node"
+    DATE_ANNOTATOR = "nlpsandbox:date-annotator"
+    ID_ANNOTATOR = "nlpsandbox:id-annotator"
+    PERSON_NAME_ANNOTATOR = "nlpsandbox:person-name-annotator"
+    PHI_ANNOTATOR = "nlpsandbox:phi-annotator"
+    PHI_DEIDENTIFIER = "nlpsandbox:phi-deidentifier"
+    LOCATION_ANNOTATOR = "nlpsandbox:location-annotator"
+    def __init__(self):  # noqa: E501
+        """ToolType - a model defined in OpenAPI
+
+        """
+        self.openapi_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ToolType':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ToolType of this ToolType.  # noqa: E501
+        :rtype: ToolType
+        """
+        return util.deserialize_model(dikt, cls)
