# server/openapi_server/openapi/openapi.yaml
@@ -6,13 +6,13 @@ info:
     url: https://nlpsandbox.io
   description: |
     # Introduction
-    A Physical Address Annotator takes as input a clinical note and outputs a list of predicted physical address annotations found in the clinical note. This OpenAPI document describes the specification of a Physical Address Annotator. This specification includes the schemas of the input and output data, and the conditions that this annotator must meet if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
+    A location annotator takes as input a clinical note and outputs a list of predicted location annotations found in the clinical note. This OpenAPI document describes the specification of the NLP Sandbox Location Annotator API. This specification includes the schemas of the input and output data, and the requirements that this annotator must meet if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
     # Getting Started
-    The GitHub repository [nlpsandbox/physical-address-annotator-example](https://github.com/nlpsandbox/physical-address-annotator-example) provides a simple example implementation of a Python-Flask Physical Address Annotator. By the end of the tutorial available in the README, you will have built a Docker image for a simple Physical Address Annotator. You will then be able to submit this image to [nlpsandbox.io](https://nlpsandbox.io) to benchmark its performance.
+    The GitHub repository [nlpsandbox/location-annotator-example](https://github.com/nlpsandbox/location-annotator-example) provides an example implementation of the NLP Sandbox Location Annotator API in Python-Flask. By the end of the tutorial available in the README, you will have built a Docker image for this NLP Sandbox tool. You will then be able to submit this image to [nlpsandbox.io](https://nlpsandbox.io) to benchmark its performance.
     # Benchmarking Requirements
-    Your NLP Sandbox tool must meet the following conditions before evaluating its performance on [nlpsandbox.io](https://nlpsandbox.io).
+    Your NLP Sandbox tool must meet the following requirements before evaluating its performance on [nlpsandbox.io](https://nlpsandbox.io).
     - The endpoint `/` must redirect to `/api/v1/tool`.
-    - The endpoint `/ui` must redirect to the web interface (UI).
+    - The endpoint `/ui` must redirect to the Swagger User Interface (UI).
     - The output of this tool must be reproducible: a given input should always
       generate the same output.
 
@@ -22,22 +22,22 @@ info:
       connect to remote servers.
 
     # Examples
-    - [Physical Address Annotator Example (Python)](https://github.com/nlpsandbox/physical-address-annotator-example)
+    - [NLP Sandbox Location Annotator Example (Python)](https://github.com/nlpsandbox/location-annotator-example)
   license:
     name: Apache 2.0
-    url: https://github.com/nlpsandbox/nlpsandbox-schemas/blob/develop/LICENSE
-  title: NLP Sandbox Physical Address Annotator API
-  version: 1.1.2
+    url: https://github.com/nlpsandbox/nlpsandbox-schemas/blob/main/LICENSE
+  title: NLP Sandbox Location Annotator API
+  version: 1.2.0
   x-logo:
-    url: https://nlpsandbox.github.io/nlpsandbox-schemas/logo.png
+    url: https://github.com/nlpsandbox/nlpsandbox-schemas/raw/main/docs/logo.png
 servers:
 - url: http://example.com/api/v1
 - url: https://example.com/api/v1
 tags:
 - description: Operations about health checks
   name: HealthCheck
-- description: Operations about text physical address annotations
-  name: TextPhysicalAddressAnnotation
+- description: Operations about text location annotations
+  name: TextLocationAnnotation
 - description: Operations about this tool
   name: Tool
 paths:
@@ -69,21 +69,21 @@ paths:
       tags:
       - HealthCheck
       x-openapi-router-controller: openapi_server.controllers.health_check_controller
-  /textPhysicalAddressAnnotations:
+  /textLocationAnnotations:
     post:
-      description: Return the physical addresse annotations found in a clinical note
-      operationId: create_text_physical_address_annotations
+      description: Return the location annotations found in a clinical note
+      operationId: create_text_location_annotations
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TextPhysicalAddressAnnotationRequest'
+              $ref: '#/components/schemas/TextLocationAnnotationRequest'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TextPhysicalAddressAnnotationResponse'
+                $ref: '#/components/schemas/TextLocationAnnotationResponse'
           description: Success
         "400":
           content:
@@ -98,10 +98,10 @@ paths:
                 $ref: '#/components/schemas/Error'
           description: The request cannot be fulfilled due to an unexpected server
             error
-      summary: Annotate physical addresses in a clinical note
+      summary: Annotate locations in a clinical note
       tags:
-      - TextPhysicalAddressAnnotation
-      x-openapi-router-controller: openapi_server.controllers.text_physical_address_annotation_controller
+      - TextLocationAnnotation
+      x-openapi-router-controller: openapi_server.controllers.text_location_annotation_controller
   /tool:
     get:
       description: Get information about the tool
@@ -270,8 +270,8 @@ components:
       - type
       title: Note
       type: object
-    TextPhysicalAddressAnnotationRequest:
-      description: A request to annotate physical addresses in a clinical note
+    TextLocationAnnotationRequest:
+      description: A request to annotate locations in a clinical note
       example:
         note:
           identifier: awesome-note
@@ -313,43 +313,43 @@ components:
       - start
       - text
       type: object
-    TextPhysicalAddressAnnotation:
+    TextLocationAnnotation:
       allOf:
       - $ref: '#/components/schemas/TextAnnotation'
-      - $ref: '#/components/schemas/TextPhysicalAddressAnnotation_allOf'
-      description: A physical address annotation in a text
+      - $ref: '#/components/schemas/TextLocationAnnotation_allOf'
+      description: A location annotation in a text
       example:
         start: 42
         length: 7
         text: Seattle
-        addressType: city
+        locationType: city
         confidence: 95.5
-      title: TextPhysicalAddressAnnotation
+      title: TextLocationAnnotation
       type: object
-    TextPhysicalAddressAnnotationResponse:
-      description: The response to a physical addresses annotation request
+    TextLocationAnnotationResponse:
+      description: The response to a locations annotation request
       example:
-        textPhysicalAddressAnnotations:
+        textLocationAnnotations:
         - start: 42
           length: 7
           text: Seattle
-          addressType: city
+          locationType: city
           confidence: 95.5
         - start: 42
           length: 7
           text: Seattle
-          addressType: city
+          locationType: city
           confidence: 95.5
       properties:
-        textPhysicalAddressAnnotations:
-          description: A list of physical address annotations
+        textLocationAnnotations:
+          description: A list of location annotations
           items:
-            $ref: '#/components/schemas/TextPhysicalAddressAnnotation'
-          title: textPhysicalAddressAnnotations
+            $ref: '#/components/schemas/TextLocationAnnotation'
+          title: textLocationAnnotations
           type: array
       required:
-      - textPhysicalAddressAnnotations
-      title: TextPhysicalAddressAnnotationResponse
+      - textLocationAnnotations
+      title: TextLocationAnnotationResponse
       type: object
     License:
       description: The license (license keyword used by GitHub)
@@ -394,10 +394,18 @@ components:
       type: string
     ToolType:
       description: The type of this tool
+      enum:
+      - nlpsandbox:contact-annotator
+      - nlpsandbox:covid-symptom-annotator
+      - nlpsandbox:data-node
+      - nlpsandbox:date-annotator
+      - nlpsandbox:id-annotator
+      - nlpsandbox:person-name-annotator
+      - nlpsandbox:phi-annotator
+      - nlpsandbox:phi-deidentifier
+      - nlpsandbox:physical-address-annotator
       example: nlpsandbox:date-annotator
-      maxLength: 60
-      minLength: 3
-      pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$
+      title: ToolType
       type: string
     Tool:
       description: Information about an NLP tool
@@ -411,7 +419,7 @@ components:
         authorEmail: author@example.com
         url: https://example.com
         type: nlpsandbox:date-annotator
-        apiVersion: 1.1.2
+        apiVersion: 1.2.0
       properties:
         name:
           description: The tool name
@@ -431,7 +439,7 @@ components:
           type: string
         description:
           description: A short, one-sentence summary of the tool
-          maxLength: 100
+          maxLength: 280
           type: string
         author:
           description: The author of the tool
@@ -445,12 +453,7 @@ components:
           format: uri
           type: string
         type:
-          description: The type of this tool
-          example: nlpsandbox:date-annotator
-          maxLength: 60
-          minLength: 3
-          pattern: ^[a-z0-9]+(?:-[a-z0-9]+)*(:)[a-z0-9]+(?:-[a-z0-9]+)*$
-          type: string
+          $ref: '#/components/schemas/ToolType'
         apiVersion:
           description: The version of the tool OpenAPI specification
           minLength: 1
@@ -482,7 +485,7 @@ components:
           authorEmail: author@example.com
           url: https://example.com
           type: nlpsandbox:date-annotator
-          apiVersion: 1.1.2
+          apiVersion: 1.2.0
         - name: awesome-nlp-tool
           version: 1.0.6
           license: apache-2.0
@@ -492,7 +495,7 @@ components:
           authorEmail: author@example.com
           url: https://example.com
           type: nlpsandbox:date-annotator
-          apiVersion: 1.1.2
+          apiVersion: 1.2.0
       properties:
         tools:
           description: A list of tools
@@ -504,10 +507,10 @@ components:
       - tools
       title: ToolDependencies
       type: object
-    TextPhysicalAddressAnnotation_allOf:
+    TextLocationAnnotation_allOf:
       properties:
-        addressType:
-          description: Type of address information
+        locationType:
+          description: Type of location
           enum:
           - city
           - country
@@ -521,5 +524,5 @@ components:
           - zip
           type: string
       required:
-      - addressType
+      - locationType
       type: object
